added css changes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 <body>
 
     <div class="container-fluid">
-        <div class="row">
-            <br>
-
-        </div>
 
         <div class="row">
             <div class="col-2 bordered"></div>
@@ -32,7 +28,7 @@
             <div class="col-3 bordered"></div>
 
             <div class="col-6 bordered">
-                <br><br>
+                
                 <div class="bezig tekst" style="text-align: center;">Work in progress</div>
             </div>
 
@@ -43,8 +39,12 @@
             <div class="col-3 bordered"></div>
 
             <div class="col-6 bordered">
-                <br><br>
+                <br>
                 <div class="nieuw tekst">Nieuwe website komt op 1 Februari 2020 om 12u00</div>
+                <div class="nieuw tekst">Commanderie 10 3740 Bilzen 089/23.56.70</div>
+                <div class="nieuw tekst">Maandag - zaterdag doorlopend: 09u30 - 18u00</div>
+                <div class="nieuw tekst">Zondag voormiddag: enkel op afspraak</div>
+                
             </div>
 
             <div class="col-3 bordered"></div>
@@ -54,7 +54,7 @@
             <div class="col-3 bordered"></div>
 
             <div class="col-6 bordered">
-                <br><br>
+                <br>
                 <div id="tijd" class="bezig tekst"></div>
             </div>
 
