added facebook pixel + changes

--- a/verloving.html
+++ b/verloving.html
@@ -11,7 +11,23 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://kit.fontawesome.com/29ee9155a6.js" crossorigin="anonymous"></script>
-    
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window,document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '237095170790186'); 
+        fbq('track', 'PageView');
+    </script>
+    <noscript>
+        <img height="1" width="1" 
+        src="https://www.facebook.com/tr?id=237095170790186&ev=PageView
+        &noscript=1"/>
+    </noscript>
     
 </head>
 
@@ -70,6 +86,15 @@
         <div class="row">
             <div class="col-12 bordered vakmanschap edges">
                 <p class="texthor merkText"><b>Verloving</b></p>
+            </div>
+        </div>
+
+        <br><br>
+        <br><br>
+
+        <div class="row">
+            <div class="col-12 bordered vakmanschap edges">
+                <p class="texthor"><b>Binnenkort meer</b></p>
             </div>
         </div>
 
