changed oorbellen text

--- a/frank.html
+++ b/frank.html
@@ -223,7 +223,9 @@
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 bordered texttransparant">
                 <br>
                 <h1><b>Herstellingen</b></h1>
-                <p></p>
+                <p>
+
+                </p>
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-1 bordered">
@@ -245,7 +247,16 @@
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 bordered texttransparant">
                 <br>
                 <h1><b>Oorbellen schieten</b></h1>
-                <p></p>
+                <p>
+                    De allereerste oorbelletjes zijn een belangrijke stap voor jonge kindjes.
+                    We werken met het moderne Studex 75 systeem en geheel volgens de hygiënische richtlijnen van de GGG.
+                    We zetten de oorbelletjes bij kindjes vanaf 3 jaar.
+                    We zetten ze ook steeds met twee tesamen.
+                    U hoeft hier geen afspraak voor te maken.
+                    Op onze facebookpagina ziet u regelmatig kindjes waarvan de oorbelletjes gezet zijn. Zo krijgt u alvast een beeld over hoe dit op een positieve manier gebeurt.
+                    Elk kindje krijgt ook een diploma en cadeautje en gaan allemaal blij naar buiten. <br>
+                    <a style="color: white;" href="https://www.studex.be/">Studex link</a>
+                </p>
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-1 bordered">
