edit gedenkjuwelen text

--- a/frank.html
+++ b/frank.html
@@ -277,9 +277,14 @@
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 bordered texttransparant">
                 <br>
                 <h1><b>Gedenkjuwelen</b></h1>
-                <p>Een gedenksieraad is niet zomaar een sieraad, maar een met een hele mooie betekenis. Het staat symbool voor de band tussen u en uw dierbare. </p>
-                <p>Bij ons kan u kiezen uit hangers, ringen, armbanden, kaarsenhouders enz. U kan kiezen voor het verwerken van as, haar, foto of vingerafdruk. De mogelijkheden zijn bijna eindeloos. </p>
-                <p>Door middel van speciale hars is het zelfs mogelijk om de as zichtbaar te houden en ook hier kan u kiezen voor doorzichtige of gekleurde hars. Het verwerken van uw gedenksieraad gebeurt steeds met respect en in eigen atelier.</p>
+                <p>
+                    Een gedenksieraad is niet zomaar een sieraad, maar een met een wel hele mooie betekenis.
+                    Het staat symbool voor de band tussen u en uw dierbare.
+                    Bij ons heeft u keuze uit hangers, ringen armbanden, kaarsenhouders enz.
+                    U kan kiezen voor het verwerken van as, haar, foto of vingerafdruk, de mogelijkheden zijn bijna eindeloos.
+                    Door middel van speciale hars is het zelfs mogelijk om de as zichtbaar te houden en ook hier kan u kiezen voor doorzichtig of kleur.
+                    Het verwerken van uw gedenksieraad gebeurt steeds met respect en in eigen atelier.
+                </p>
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-1 bordered">
