Edit uurwerken + schrijffout

--- a/frank.html
+++ b/frank.html
@@ -178,7 +178,7 @@
             <div class="col-sm-10 col-md-8 col-lg-8 col-xl-8 vakmanschap">
                 <p><b>Vakmanschap en service zijn de sleutelwoorden waar we elke dag aan willen werken.</b></p>
                 <p><b>Van de kleinste kindersieraden tot onze handgemaakte ringen, van onze oud goud collectie tot onze trouwringen, steeds willen we het beste juweel voor onze klanten.</b></p>
-                <p><b>Bovendien graveren wij gratis in elk aangekocht uurwerk uw naam zodat deze uurwerken nog persooijker worden. </b></p>
+                <p><b>Bovendien graveren wij gratis in elk aangekocht uurwerk uw naam zodat deze uurwerken nog persoonlijker worden. </b></p>
                 <p><b>Bij vervanging van de batterij krijgt u zo ook automatisch een korting.</b></p>
             </div>
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 bordered vakmanschap">
