--- a/merk.html
+++ b/merk.html
@@ -159,10 +159,10 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href=""><img class="merkContent" src="img/gentokids.jpg" alt="Gento for kids"></a><br>
+                <a href="http://www.gentojewels.com/kids/"><img class="merkContent" src="img/gentokids.jpg" alt="Gento for kids"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href=""><img class="merkContent" src="img/naiomyprincess.jpg" alt="Naiomy Princess"></a><br>
+                <a href="https://www.naiomy.com/nl/princess/"><img class="merkContent" src="img/naiomyprincess.jpg" alt="Naiomy Princess"></a><br>
             </div>
         </div>
 
@@ -200,60 +200,52 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/polar.jpg" alt="polar"></a>
+                <a href="https://www.polar.com/be-nl" target=”_blank”><img class="merkContent" src="img/polar.jpg" alt="polar"></a>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/seiko.png" alt="seiko"></a>
+                <a href="https://www.seiko.nl/" target=”_blank”><img class="merkContent" src="img/seiko.png" alt="seiko"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/certina.jpg" alt="Certina"></a>
-            </div>
-            
-
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/rodania.png" alt="rodania"></a>
+                <a href="https://www.certina.com/be-en" target=”_blank”><img class="merkContent" src="img/certina.jpg" alt="Certina"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/festina.jpg" alt="Festina"></a>
+                <a href="https://rodania1930.com/en/" target=”_blank”><img class="merkContent" src="img/rodania.png" alt="rodania"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/kors.jpg" alt="Michaël Kors"></a>
+                <a href="https://www.festinagroup.com/" target=”_blank”><img class="merkContent" src="img/festina.jpg" alt="Festina"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/laimer.jpg" alt="Laimer"></a>
+                <a href="https://www.michaelkors.eu/en_BE/watches/view-all-watches/_/N-zzyd20" target=”_blank”><img class="merkContent" src="img/kors.jpg" alt="Michaël Kors"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/balmain.jpg" alt="Pierre Balmain"></a>
+                <a href="https://www.balmainwatches.com/" target=”_blank”><img class="merkContent" src="img/balmain.jpg" alt="Pierre Balmain"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/weil.jpg" alt="Raymond Weil"></a>
+                <a href="https://www.raymond-weil.com/en/" target=”_blank”><img class="merkContent" src="img/weil.jpg" alt="Raymond Weil"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/diesel.jpg" alt="Diesel"></a>
+                <a href="https://be.diesel.com/en/man/watches-and-smartwatches/" target=”_blank”><img class="merkContent" src="img/diesel.jpg" alt="Diesel"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/casio.jpg" alt="Casio"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/casio.jpg" alt="Casio"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/edifice.jpg" alt="Edifice"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/edifice.jpg" alt="Edifice"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/ice.jpg" alt="Ice Watch"></a>
+                <a href="https://www.ice-watch.com/en" target=”_blank”><img class="merkContent" src="img/ice.jpg" alt="Ice Watch"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/mvmt.jpg" alt="MVMT"></a>
+                <a href="https://www.mvmt.com/" target=”_blank”><img class="merkContent" src="img/mvmt.jpg" alt="MVMT"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/ebel.jpg" alt="Ebel"></a>
+                <a href="https://www.ebel.com/" target=”_blank”><img class="merkContent" src="img/ebel.jpg" alt="Ebel"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/wellington.jpg" alt="Daniël Wellington"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/fossil.jpg" alt="Fossil"></a>
+                <a href="https://www.fossil.com/fr-fr/montres/" target=”_blank”><img class="merkContent" src="img/fossil.jpg" alt="Fossil"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/liu.jpg" alt="Liu.Jo"></a>
@@ -262,31 +254,25 @@
                 <a href=""><img class="merkContent" src="img/skagen.jpg" alt="Skagen"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/boccia.jpg" alt="Boccia"></a>
+                <a href="http://www.loriaux.be/" target=”_blank”><img class="merkContent" src="img/boccia.jpg" alt="Boccia"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/hbBlack.jpg" alt="Hugo Boss Black"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/hbBlack.jpg" alt="Hugo Boss Black"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/hbOrange.jpg" alt="Hugo Boss Orange"></a>
+                <a href="https://www.louiserard.com/" target=”_blank”><img class="merkContent" src="img/erard.jpg" alt="Louis Erard"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/erard.jpg" alt="Louis Erard"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/pontiac.jpg" alt="Pontiac"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/pontiac.jpg" alt="Pontiac"></a>
+                <a href="https://roamer.ch/" target=”_blank”><img class="merkContent" src="img/roamer.jpg" alt="Roamer"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/roamer.jpg" alt="Roamer"></a>
+                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/welder.jpg" alt="Welder"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/swiss.jpg" alt="Swissmilitary"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/welder.jpg" alt="Welder"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/obaku.jpg" alt="Obaku"></a>
+                <a href="https://www.obaku.com/" target=”_blank”><img class="merkContent" src="img/obaku.jpg" alt="Obaku"></a>
             </div>
         </div>
 
@@ -307,9 +293,6 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
                 <a href=""><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
-            </div>
-            <div class="col-6 col-sm-3 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/silis.jpg" alt="Silis"></a><br>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/gento.jpg" alt="Gento Jewels"></a>
@@ -336,9 +319,6 @@
                 <a href=""><img class="merkContent" src="img/naiomy.jpg" alt="Naiomy"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/zinzi.png" alt="Zinzi"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/950.png" alt="950 collection"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
@@ -351,16 +331,7 @@
                 <a href=""><img class="merkContent" src="img/breuning.jpg" alt="Breuning"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/kasius.jpg" alt="Kasius"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/j&a.jpg" alt="J&A Collection"></a>
-            </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/cara.jpg" alt="Cara"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/diluna.jpg" alt="Di Luna"></a>
