Edit juwelen links

--- a/merk.html
+++ b/merk.html
@@ -102,14 +102,14 @@
             </div>
             
             <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href="" target="_blank"><img class="merkContent" src="img/breuning.jpg" alt="Breuning"></a>
+                <a href="https://www.breuning.de/home.html" target="_blank"><img class="merkContent" src="img/breuning.jpg" alt="Breuning"></a>
             </div>
 
             <div class="d-none d-md-block col-md-1 col-lg-1 col-xl-1 bordered">
                 <br>
             </div>
             <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 bordered">
-                <a href="" target="_blank"><img class="merkContent" src="img/euxx.jpg" alt="D'Euxx"></a>
+                <a href="http://www.deuxx.be/" target="_blank"><img class="merkContent" src="img/euxx.jpg" alt="D'Euxx"></a>
             </div>
             <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 bordered">
                 <a href="" target="_blank"><img class="merkContent" src="img/titan.jpg" alt="TitanFactory"></a>
@@ -140,10 +140,10 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href=""><img class="merkContent" src="img/seeyou.png" alt="See You"></a><br>
+                <a href="https://www.seeyougedenksieraden.nl/" target=”_blank”><img class="merkContent" src="img/seeyou.png" alt="See You"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href=""><img class="merkContent" src="img/dots.png" alt="Dots4You"></a><br>
+                <a href="" target=”_blank”><img class="merkContent" src="img/dots.png" alt="Dots4You"></a><br>
             </div>
         </div>
 
@@ -159,10 +159,10 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href="http://www.gentojewels.com/kids/"><img class="merkContent" src="img/gentokids.jpg" alt="Gento for kids"></a><br>
+                <a href="http://www.gentojewels.com/kids/" target=”_blank”><img class="merkContent" src="img/gentokids.jpg" alt="Gento for kids"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 bordered">
-                <a href="https://www.naiomy.com/nl/princess/"><img class="merkContent" src="img/naiomyprincess.jpg" alt="Naiomy Princess"></a><br>
+                <a href="https://www.naiomy.com/nl/princess/" target=”_blank”><img class="merkContent" src="img/naiomyprincess.jpg" alt="Naiomy Princess"></a><br>
             </div>
         </div>
 
@@ -178,13 +178,13 @@
 
         <div class="row">
             <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/hellinx.png" alt="Frank Hellinx"></a><br>
+                <a href="" target=”_blank”><img class="merkContent" src="img/hellinx.png" alt="Frank Hellinx"></a><br>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/emotions.jpg" alt="Emotions"></a><br>
+                <a href="" target=”_blank”><img class="merkContent" src="img/emotions.jpg" alt="Emotions"></a><br>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/pigou.jpg" alt="Pigou"></a><br>
+                <a href="" target=”_blank”><img class="merkContent" src="img/pigou.jpg" alt="Pigou"></a><br>
             </div>
         </div>
 
@@ -289,55 +289,61 @@
         <div class="row">
 
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/cammilli.jpg" alt="cammilli"></a><br>
+                <a href="https://www.annamariacammilli.com/row/?___store=row&___from_store=it" target=”_blank”><img class="merkContent" src="img/cammilli.jpg" alt="cammilli"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href=""><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
+                <a href="https://www.buddhatobuddha.com/nl/" target=”_blank”><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
+                <a href="http://www.gentojewels.com/" target=”_blank”><img class="merkContent" src="img/gento.jpg" alt="Gento Jewels"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/gento.jpg" alt="Gento Jewels"></a>
+                <a href="http://www.silverrosecollection.com/" target=”_blank”><img class="merkContent" src="img/silverrose.jpg" alt="Silverrose"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/silverrose.jpg" alt="Silverrose"></a>
+                <a href="https://milor.com/" target=”_blank”><img class="merkContent" src="img/bronzallure.jpg" alt="Bronzallure"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/bronzallure.jpg" alt="Bronzallure"></a>
+                <a href="https://myimenso.eu/" target=”_blank”><img class="merkContent" src="img/imenso.jpg" alt="My Imenso"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/imenso.jpg" alt="My Imenso"></a>
+                <a href="http://www.nobless.be/nl/collecties/diamonfire.html" target=”_blank”><img class="merkContent" src="img/diamondfire.png" alt="Diamondfire"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/diamondfire.png" alt="Diamondfire"></a>
+                <a href="http://www.nobless.be/" target=”_blank”><img class="merkContent" src="img/noblesse.jpg" alt="Noblesse"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/noblesse.jpg" alt="Noblesse"></a>
+                <a href="https://www.montu.nu/" target=”_blank”><img class="merkContent" src="img/invernum.jpg" alt="Bastian Invernum"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/invernum.jpg" alt="Bastian Invernum"></a>
+                <a href="https://www.beheyt-jewels.be/" target=”_blank”><img class="merkContent" src="img/naiomy.jpg" alt="Naiomy"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/naiomy.jpg" alt="Naiomy"></a>
+                <a href="" target=”_blank”><img class="merkContent" src="img/950.png" alt="950 collection"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/950.png" alt="950 collection"></a>
+                <a href="https://www.gemini-official.com/" target=”_blank”><img class="merkContent" src="img/gemini.jpg" alt="Gemini"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/gemini.jpg" alt="Gemini"></a>
+                <a href="https://www.onno.be/" target=”_blank”><img class="merkContent" src="img/onno.png" alt="Onno"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/onno.png" alt="Onno"></a>
+                <a href="https://www.breuning.de/home.html" target=”_blank”><img class="merkContent" src="img/breuning.jpg" alt="Breuning"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/breuning.jpg" alt="Breuning"></a>
+                <a href="https://ja1970.com/en/" target=”_blank”><img class="merkContent" src="img/j&a.jpg" alt="J&A Collection"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/j&a.jpg" alt="J&A Collection"></a>
+                <a href="" target=”_blank”><img class="merkContent" src="img/diluna.jpg" alt="Di Luna"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/diluna.jpg" alt="Di Luna"></a>
+                <a href="" target=”_blank”><img class="merkContent" src="img/bozarts.png" alt="Bozarts"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href=""><img class="merkContent" src="img/bozarts.png" alt="Bozarts"></a>
+                <a href="https://www.rivermounts.com/s/?language=en_US" target=”_blank”><img class="merkContent" src="img/river.png" alt="River Mounts"></a>
+            </div>
+            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+                <a href="https://www.didyma-official.com/?lang=nl" target=”_blank”><img class="merkContent" src="img/didyma.png" alt="Didyma"></a>
             </div>
         </div>
     
