Kleine updates en links merken aangepast

--- a/merk.html
+++ b/merk.html
@@ -215,7 +215,7 @@
                 <a href="https://www.festinagroup.com/" target=”_blank”><img class="merkContent" src="img/festina.jpg" alt="Festina"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.michaelkors.eu/en_BE/watches/view-all-watches/_/N-zzyd20" target=”_blank”><img class="merkContent" src="img/kors.jpg" alt="Michaël Kors"></a>
+                <a href="" target=”_blank”><img class="merkContent" src="img/kors.jpg" alt="Michaël Kors"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.balmainwatches.com/" target=”_blank”><img class="merkContent" src="img/balmain.jpg" alt="Pierre Balmain"></a>
@@ -227,16 +227,16 @@
                 <a href="https://be.diesel.com/en/man/watches-and-smartwatches/" target=”_blank”><img class="merkContent" src="img/diesel.jpg" alt="Diesel"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/casio.jpg" alt="Casio"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=1" target=”_blank”><img class="merkContent" src="img/casio.jpg" alt="Casio"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/edifice.jpg" alt="Edifice"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=1" target=”_blank”><img class="merkContent" src="img/edifice.jpg" alt="Edifice"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.ice-watch.com/en" target=”_blank”><img class="merkContent" src="img/ice.jpg" alt="Ice Watch"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=12" target=”_blank”><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.mvmt.com/" target=”_blank”><img class="merkContent" src="img/mvmt.jpg" alt="MVMT"></a>
@@ -245,7 +245,7 @@
                 <a href="https://www.ebel.com/" target=”_blank”><img class="merkContent" src="img/ebel.jpg" alt="Ebel"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.fossil.com/fr-fr/montres/" target=”_blank”><img class="merkContent" src="img/fossil.jpg" alt="Fossil"></a>
+                <a href="" target=”_blank”><img class="merkContent" src="img/fossil.jpg" alt="Fossil"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href=""><img class="merkContent" src="img/liu.jpg" alt="Liu.Jo"></a>
@@ -257,19 +257,19 @@
                 <a href="http://www.loriaux.be/" target=”_blank”><img class="merkContent" src="img/boccia.jpg" alt="Boccia"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/hbBlack.jpg" alt="Hugo Boss Black"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=6" target=”_blank”><img class="merkContent" src="img/hbBlack.jpg" alt="Hugo Boss Black"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.louiserard.com/" target=”_blank”><img class="merkContent" src="img/erard.jpg" alt="Louis Erard"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/pontiac.jpg" alt="Pontiac"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=11" target=”_blank”><img class="merkContent" src="img/pontiac.jpg" alt="Pontiac"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://roamer.ch/" target=”_blank”><img class="merkContent" src="img/roamer.jpg" alt="Roamer"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
-                <a href="https://www.chronodiffusion.be/" target=”_blank”><img class="merkContent" src="img/welder.jpg" alt="Welder"></a>
+                <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=14" target=”_blank”><img class="merkContent" src="img/welder.jpg" alt="Welder"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.obaku.com/" target=”_blank”><img class="merkContent" src="img/obaku.jpg" alt="Obaku"></a>
@@ -344,6 +344,9 @@
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.didyma-official.com/?lang=nl" target=”_blank”><img class="merkContent" src="img/didyma.png" alt="Didyma"></a>
+            </div>
+            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+                <a href="https://femmeadoree.be/" target=”_blank”><img class="merkContent" src="img/femme.png" alt="Femme adorée"></a>
             </div>
         </div>
     
