--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <button id="myBtn2" class="myBtn2" onclick="welkom()">Welkom</button>
             </div>
             <div class="col-lg-10 col-md-12 mt-5">
+                <h1 class="text-white"><b>Corona-update</b></h1>
                 <h3 class="text-white">Wist je dat…</h3>
                 <ul class="text-white">
                     <li>We alle dagen open zijn van 9u30 tot 18u (behalve zondag).</li>
