--- a/index.html
+++ b/index.html
@@ -41,19 +41,13 @@
                 <button id="myBtn2" class="myBtn2" onclick="welkom()">Welkom</button>
             </div>
             <div class="col-lg-6 col-md-12 mt-5">
-                <h1 class="text-white"><b>Corona-update</b></h1>
-                <h3 class="text-white">Wist je dat…</h3>
+                <h1 class="text-white"><b>Eindejaars Openingsuren</b></h1>
+                <!-- <h3 class="text-white">Wist je dat…</h3> -->
                 <ul class="text-white">
-                    <li>We alle dagen open zijn van 9u30 tot 18u (behalve zondag).</li>
-                    <li>We alle herstellingen blijven verder doen, inclusief batterijen zetten.</li>
-                    <li>Je onze etalages elke dag kan komen bewonderen.</li>
-                    <li>Je een foto kan nemen van het gewenste artikel. Stuur deze foto via messenger, whatsapp of mail door. Wij maken alles in orde voor u!</li>
-                    <li>Je ons kan bellen op het nr: 0479/80 41 58 of 0471/47 13 58 terwijl je voor onze etalage staat te kiezen. We geven je life advies en helpen je met je keuze.</li>
-                    <li>Je je bestelde artikelen kan afhalen op ons collect & go punt of we leveren het gratis aan huis binnen een straal van 15km.</li>
-                    <li>We elke dag nieuwtjes plaatsen op onze facebookpagina.</li>
-                    <li>We met een gemotiveerd team elke dag garant blijven staan voor service en kwaliteit.</li>
-                    <li>Windowshoppen = safe shoppen. Koop lokaal en steun  de plaatselijke handelaar.</li>
-                    <li>Je meer uitleg kan vinden over onze werkwijze op window-shoppen.be</li>
+                    <li>09u00 - 20u00 tot en met 23 december (Behalve op zondag)</li>
+                    <li>09u30 - 18u00 op zondag</li>
+                    <li>09u00 - 17u00 op 24 december en 31 december</li>
+                    <li>Afspraak maken is niet nodig!</li>
                 </ul>
                 <h3 class="text-white">Blijf gezond en hou het veilig</h3>
                 <h3 class="text-white">Team Frank Hellinx</h3>
