eindejaarstekst weg en gamin uurwerken bij

--- a/frank.html
+++ b/frank.html
@@ -81,7 +81,7 @@
 
     <div class="container-fluid">
 
-        <div class="row bordered edges mt-3">
+        <!-- <div class="row bordered edges mt-3">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 bordered vakmanschap">
                 <br>
             </div>
@@ -94,9 +94,9 @@
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 bordered vakmanschap">
                 <br>
             </div>
-        </div>
+        </div> -->
 
-        <div class="row bordered mb-3 justify-content-center">
+        <!-- <div class="row bordered mb-3 justify-content-center">
 
             <div class="col-sm-11 col-md-8 bordered mt-5">
                 
@@ -211,7 +211,7 @@
                 </div>
             </div>
             
-        </div>
+        </div> -->
 
         <div class="row bordered">
 
