--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="row mt-5 justify-content-center">
             <div class="col-lg-6 col-md-12 mt-5 justify-content-center">
                 <video class="video-fluid" loop poster="img/video.png" onclick="myFunction()" id="myVideo">
@@ -42,7 +42,7 @@
             </div>
             <div class="col-lg-6 col-md-12 mt-5">
                 <h1 class="text-white"><b>Eindejaars Openingsuren</b></h1>
-                <!-- <h3 class="text-white">Wist je dat…</h3> -->
+                <h3 class="text-white">Wist je dat…</h3>
                 <ul class="text-white">
                     <li>09u00 - 20u00 tot en met 23 december (Behalve op zondag)</li>
                     <li>09u30 - 18u00 op zondag</li>
@@ -52,6 +52,18 @@
                 <h3 class="text-white">Blijf gezond en hou het veilig</h3>
                 <h3 class="text-white">Team Frank Hellinx</h3>
                 </p>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="container-fluid">
+        <div class="row mt-5 justify-content-center">
+            <div class="col-lg-6 col-md-12 mt-5 justify-content-center">
+                <video class="video-fluid" loop poster="img/video.png" onclick="myFunction()" id="myVideo">
+                    <source src="img/startVideo.mp4" type="video/mp4">
+                </video>
+                <button id="myBtn1" class="myBtn1" onclick="myFunction()"><i class="fas fa-play"></i></button>
+                <button id="myBtn2" class="myBtn2" onclick="welkom()">Welkom</button>
             </div>
         </div>
     </div>
