--- a/merk.html
+++ b/merk.html
@@ -203,6 +203,9 @@
                 <a href="https://www.polar.com/be-nl" target=”_blank”><img class="merkContent" src="img/polar.jpg" alt="polar"></a>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
+                <a href="https://buy.garmin.com/nl-BE/BE/c10002-p1.html" target=”_blank”><img class="merkContent bg-white" src="img/garmin.png" alt="Garmin"></a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
                 <a href="https://www.seiko.nl/" target=”_blank”><img class="merkContent" src="img/seiko.png" alt="seiko"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-4 col-lg-4 col-xl-4 bordered">
