--- a/merk.html
+++ b/merk.html
@@ -301,6 +301,9 @@
                 <a href="http://www.gentojewels.com/" target=”_blank”><img class="merkContent" src="img/gento.jpg" alt="Gento Jewels"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+                <a href="https://blush-jewels.com/" target=”_blank”><img class="merkContent bg-white" src="img/blush.png" alt="Blush"></a>
+            </div>
+            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="http://www.silverrosecollection.com/" target=”_blank”><img class="merkContent" src="img/silverrose.jpg" alt="Silverrose"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
