--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
             <div class="col-lg-6 col-md-12 mt-5">
                 <h1 class="text-white"><b>Corona-update</b></h1>
                 <h4 class="text-white">
-                    Wegens de tijdelijke coronamaatregelen zijn we verplicht een afspraak voor u in te boeken 
-                    (ook voor herstellingen en plaatsen van batterijen)
+                    Wij zijn weer volledig open zonder afspraak!
                 </h4>
 
-                <h5 class="text-white mt-3">
+                <img src="img/IMG-20210429-WA0000.jpg" alt="">
+
+                <!-- <h5 class="text-white mt-3">
                     Maar we maken het u gemakkelijk! <br>
                     Een afspraak inplannen kan eenvoudig door:
                 </h5>
@@ -79,7 +80,7 @@
                         text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 28px;">
                         Boek uw afspraak hier
                     </a>
-                </div>
+                </div> -->
                 
                 <!-- <ul class="text-white">
                     <li>09u00 - 20u00 tot en met 23 december (Behalve op zondag)</li>
@@ -87,7 +88,7 @@
                     <li>09u00 - 17u00 op 24 december en 31 december</li>
                     <li>Afspraak maken is niet nodig!</li>
                 </ul> -->
-                <h5 class="text-white">We werken volgens onze normale openingsuren:</h5>
+                <h5 class="text-white mt-2">We werken volgens onze normale openingsuren:</h5>
                 <h5 class="text-white mb-4">Van maandag tot en met zaterdag doorlopend open van 9u30 tot 18u00</h5>
                 <h3 class="text-white">Blijf gezond en hou het veilig</h3>
                 <h3 class="text-white">Team Frank Hellinx</h3>
