--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     Wij zijn weer volledig open zonder afspraak!
                 </h4>
 
-                <img src="img/IMG-20210429-WA0000.jpg" alt="">
+                <!-- <img src="img/IMG-20210429-WA0000.jpg" alt=""> -->
 
                 <!-- <h5 class="text-white mt-3">
                     Maar we maken het u gemakkelijk! <br>
