--- a/trouwEn.html
+++ b/trouwEn.html
@@ -100,25 +100,32 @@
         </div>
 
 
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 bordered">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8 col-12 bordered">
                 <div class="row">
                     <link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/18969848.css" id="acuity-button-styles" />
                     <script src="https://embed.acuityscheduling.com/embed/button/18969848.js" async></script>
                     <a href="https://app.acuityscheduling.com/schedule.php?owner=18969848" target="_blank" class="acuity-embed-button" 
                         style="background: #666666; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
                         -moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; 
-                        text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 28px;">
+                        text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 22px;">
                         Maak een afspraak
+                    </a>
+                    <a href="https://konfigurator.breuning.de/home" target="_blank" class="acuity-embed-button" 
+                        style="background: #666666; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
+                        -moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; 
+                        text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 22px;">
+                        Ontwerp je eigen trouwring
                     </a>
                     
                 </div><br>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12 bordered vakmanschap edges">
-                <p class="texthor"><b>Binnenkort meer</b></p>
+        <div class="row justify-content-center">
+            <div class="col-lg-9 col-md-11 col-12 bordered vakmanschap edges">
+                <iframe src="files/Trouwers.pdf#toolbar=0" width="100%" height="1000px">
+                </iframe>
             </div>
         </div>
         
