--- a/trouwen.html
+++ b/trouwen.html
@@ -124,8 +124,11 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-9 col-md-11 col-12 bordered vakmanschap edges">
-                <iframe src="files/Trouwers.pdf#toolbar=0" width="100%" height="1000px">
-                </iframe>
+                <object data="files/Trouwers.pdf" type="application/pdf" width="100%" height="1000px">
+                    <embed src="files/Trouwers.pdf" type="application/pdf">
+                        <p>Deze browser ondersteunt geen PDFs. Download hier de PDF: <a href="files/Trouwers.pdf">Download PDF</a>.</p>
+                    </embed>
+                </object>
             </div>
         </div>
     </div>
