--- a/trouwen.html
+++ b/trouwen.html
@@ -111,7 +111,7 @@
                         text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 22px;">
                         Maak een afspraak
                     </a>
-                    <a href="https://konfigurator.breuning.de/home" target="_blank" class="acuity-embed-button" 
+                    <a href="https://konfigurator.breuning.de/configurator" target="_blank"
                         style="background: #666666; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;
                         -moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; 
                         text-decoration: none; display: inline-block; margin-left: auto; margin-right: auto; font-size: 22px;">
