edit kerst openingsuren + albanu juwelenmerk

--- a/merk.html
+++ b/merk.html
@@ -295,9 +295,12 @@
                 <a href="https://www.annamariacammilli.com/row/?___store=row&___from_store=it" target=”_blank”><img class="merkContent" src="img/cammilli.jpg" alt="cammilli"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href="https://www.buddhatobuddha.com/nl/" target=”_blank”><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
+                <a href="https://www.albanu.mc/en" target=”_blank”><img class="merkContent" src="img/albanu.jpg" alt="Albanu"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
+                <a href="https://www.buddhatobuddha.com/nl/" target=”_blank”><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
+            </div>
+            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="http://www.gentojewels.com/" target=”_blank”><img class="merkContent" src="img/gento.jpg" alt="Gento Jewels"></a>
             </div>
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
