--- a/merk.html
+++ b/merk.html
@@ -241,9 +241,9 @@
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=12" target=”_blank”><img class="merkContent" src="img/hilfiger.jpg" alt="Tommy Hilfiger"></a>
             </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+            <!-- <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.mvmt.com/" target=”_blank”><img class="merkContent" src="img/mvmt.jpg" alt="MVMT"></a>
-            </div>
+            </div> -->
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.ebel.com/" target=”_blank”><img class="merkContent" src="img/ebel.jpg" alt="Ebel"></a>
             </div>
@@ -274,9 +274,9 @@
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.chronodiffusion.be/rayons.aspx?nv_id=14" target=”_blank”><img class="merkContent" src="img/welder.jpg" alt="Welder"></a>
             </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+            <!-- <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://www.obaku.com/" target=”_blank”><img class="merkContent" src="img/obaku.jpg" alt="Obaku"></a>
-            </div>
+            </div> -->
         </div>
 
         <br>
@@ -295,7 +295,7 @@
                 <a href="https://www.annamariacammilli.com/row/?___store=row&___from_store=it" target=”_blank”><img class="merkContent" src="img/cammilli.jpg" alt="cammilli"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
-                <a href="https://www.albanu.mc/en" target=”_blank”><img class="merkContent" src="img/albanu.jpg" alt="Albanu"></a><br>
+                <a href="https://www.albanu.mc/en" target=”_blank”><img class="merkContent" src="img/albanu.png" alt="Albanu"></a><br>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 bordered">
                 <a href="https://www.buddhatobuddha.com/nl/" target=”_blank”><img class="merkContent" src="img/buddha.jpg" alt="Buddha to buddha"></a><br>
@@ -309,9 +309,9 @@
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="http://www.silverrosecollection.com/" target=”_blank”><img class="merkContent" src="img/silverrose.jpg" alt="Silverrose"></a>
             </div>
-            <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
+            <!-- <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://milor.com/" target=”_blank”><img class="merkContent" src="img/bronzallure.jpg" alt="Bronzallure"></a>
-            </div>
+            </div> -->
             <div class="col-6 col-sm-3 col-md-2 col-lg-1 col-xl-1 bordered">
                 <a href="https://myimenso.eu/" target=”_blank”><img class="merkContent" src="img/imenso.jpg" alt="My Imenso"></a>
             </div>
