--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 </ul> -->
                 <h5 class="text-white mt-2">We werken volgens onze normale openingsuren:</h5>
                 <h5 class="text-white">Van maandag tot en met zaterdag doorlopend open van 9u30 tot 18u00</h5>
-                <h5 class="text-white">In december zijn we elke dag extra laat open van 9u30 tot 19u</h5>
-                <h5 class="text-white mb-4">Zondag 12 en 19 december zijn we ook extra open van 13u tot 18u</h5>
+                <!-- <h5 class="text-white">In december zijn we elke dag extra laat open van 9u30 tot 19u</h5>
+                <h5 class="text-white mb-4">Zondag 12 en 19 december zijn we ook extra open van 13u tot 18u</h5> -->
                 <h3 class="text-white">Blijf gezond en hou het veilig</h3>
                 <h3 class="text-white">Team Frank Hellinx</h3>
                 </p>
