remove poster en team

--- a/frank.html
+++ b/frank.html
@@ -225,7 +225,7 @@
                     <ul class="carousel-indicators">
                       <li data-target="#carfrank" data-slide-to="0" class="active"></li>
                       <li data-target="#carfrank" data-slide-to="1"></li>
-                      <li data-target="#carfrank" data-slide-to="2"></li>
+                      <!-- <li data-target="#carfrank" data-slide-to="2"></li> -->
                       <!-- <li data-target="#carfrank" data-slide-to="3"></li> -->
                     </ul>
 
@@ -238,9 +238,9 @@
                             <img src="img/winkelBilzen.jpg" alt="welkom">
                         </div>
 
-                        <div class="carousel-item">
+                        <!-- <div class="carousel-item">
                             <a href="liefde.html"><img src="img/trouwen.jpg" alt="liefde"></a>   
-                        </div>
+                        </div> -->
 
                         <!-- <div class="carousel-item">
                             <img src="img/merken.png" alt="merken">  
@@ -264,7 +264,7 @@
                     <ul class="carousel-indicators">
                       <li data-target="#carfrank2" data-slide-to="0" class="active"></li>
                       <li data-target="#carfrank2" data-slide-to="1"></li>
-                      <li data-target="#carfrank2" data-slide-to="2"></li>
+                      <!-- <li data-target="#carfrank2" data-slide-to="2"></li> -->
                       <!-- <li data-target="#carfrank2" data-slide-to="3"></li> -->
                     </ul>
 
@@ -277,9 +277,9 @@
                             <img src="img/winkelBilzen.jpg" alt="welkom">
                         </div>
 
-                        <div class="carousel-item">
+                        <!-- <div class="carousel-item">
                             <a href="trouw.html"><img src="img/trouwen.jpg" alt="liefdeen"></a>   
-                        </div>
+                        </div> -->
 
                         <!-- <div class="carousel-item">
                             <img src="img/merken.png" alt="merken">  
