--- a/team.html
+++ b/team.html
@@ -124,7 +124,7 @@
             </div>
         </div>
 
-        <br><br>
+        <!-- <br><br>
         <div class="row">
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
@@ -144,9 +144,9 @@
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
             </div>
-        </div>
+        </div> -->
 
-        <br><br>
+        <!-- <br><br>
         <div class="row">
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
@@ -166,9 +166,9 @@
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
             </div>
-        </div>
+        </div> -->
 
-        <br><br>
+        <!-- <br><br>
         <div class="row">
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
@@ -188,7 +188,7 @@
             <div class="col-sm-12 col-md-1 col-lg-1 bordered">
                 <br>
             </div>
-        </div>
+        </div> -->
 
         <br><br>
         <div class="row">
