--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
                 <p>
                     Frank studeerde eerst in Luik af als uurwerkmaker en ging daarna in Antwerpen verder als goudsmid/edelsteenzetter.
                     <br>
-                    Voor Frank staan goede service en vertrouwen op de 1<sup>ste</sup> plaats.
+                    Voor Frank staat goede service en vertrouwen op de 1<sup>ste</sup> plaats.
                 </p>
             </div>
             
@@ -120,7 +120,7 @@
             <div class="col-sm-12 col-md-5 col-lg-6 col-xl-6 bordered texttransparant teamtekst">
                 <br>
                 <h2><b>Kathleen</b></h2>
-                <p>Studeerde af als opvoester en is helemaal ingerold. Na 15 jaar kent ze de winkel als geen ander.
+                <p>Studeerde af als opvoedster en is helemaal ingerold. Na 15 jaar kent ze de winkel als geen ander.
                     Klanten blijmaken komt op de 1<sup>ste</sup> plaats. Voor de rest staat ze in voor alle administratie zoals bestellingen, personeelzaken, stock, facturen enz.
                     Een paar jaar geleden heeft ze opleidingen gevolgd om parels te knopen en assieraden of moedermelkjuweeltjes te maken.
                 </p>
@@ -170,7 +170,7 @@
                 <h2><b>Anja</b></h2>
                 <p>
                     Heeft al jarenlang ervaring opgedaan als verkoopster bij een collega-juwelier die gestopt is. Ze helpt met superkennis van zaken en weet als geen ander wat de klant nodig heeft.
-                    Hiernaast zorgt ze ervoor dat de winkel en etalages er steed verzorgd bijliggen. Ze heeft intussen ook een cursus batterijen zetten en banden inkorten gevolgd, zodat ze ook dit professioneel onder de knie heeft.    
+                    Hiernaast zorgt ze ervoor dat de winkel en etalages er steeds verzorgd bijliggen. Ze heeft intussen ook een cursus batterijen zetten en banden inkorten gevolgd, zodat ze ook dit professioneel onder de knie heeft.    
                 </p>
             </div>
             
@@ -282,7 +282,7 @@
             <div class="col-sm-12 col-md-5 col-lg-6 col-xl-6 bordered texttransparant teamtekst">
                 <br>
                 <h2><b>Kai</b></h2>
-                <p>Onze mascotte, topverkoper en bewaker van de winkel. Maar houd er nog het meeste van om op zijn buikje geaaid te worden.
+                <p>Onze mascotte, topverkoper en bewaker van de winkel. Maar houdt er nog het meeste van om op zijn buikje geaaid te worden.
                     Is onze grootste knuffelbeer.
                 </p>
             </div>
